--- a/app/index.htm
+++ b/app/index.htm
@@ -5,25 +5,20 @@
     <script src="assets/vendor/angular/angular.min.js"></script>
   </head>
   <body ng-app="minhaEscolaMelhor">
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>....{{yourName}}!</h1>	  
-    </div>
-	
-	
-	<div ng-controller="escolasController">		
-		<div ng-repeat="item in schools track by item.codEscola">
-			 [{{$index + 1}}] {{item.codEscola}} - {{item.endereco.uf}} - {{item.nome}} 
-		</div>
-		
+    <div ng-controller="schoolController">		
+		<label>Procurar: <input ng-model="searchText"></label>  {{location.name}} - 
+		<label>P&aacute;gina: <input ng-model="schoolsPage" size="3"></label> 
+		<button ng-click="getSchools()">Go</button>
+		<button ng-click="getNextSchools()">Next</button>
+		<br/><br/>
+		<schools-info items="schools" filter="searchText" />
 	</div>
 	
   </body>
   
   <script src="app/app.module.js"></script>
-  <script src="app/components/appCivico/escolas/escolasController.js"></script>
-  <script src="app/components/appCivico/escolas/escolasService.js"></script>
+  <script src="app/components/appCivico/escolas/schoolController.js"></script>
+  <script src="app/components/appCivico/escolas/schoolService.js"></script>
+  <script src="app/shared/directives/schoolsInfo.js"></script>
                
 </html>
